added pagination, ngrx page state management, api page handling

--- a/src/app/components/null-state/null-state.component.html
+++ b/src/app/components/null-state/null-state.component.html
@@ -1,11 +1,15 @@
-<div class="card flex-column-all-center gap">
-  <ng-container *ngIf="statusCode == 404">
-    NOT FOUND
-  </ng-container>
+<div class="null-state flex-column-all-center gap">
+  <div class="card">
+    <ng-container *ngIf="statusCode == 404">
+      <img class="card__image" src="../../../assets/images/wrong_state.svg" alt="404 Not Found">
+      <h1>404 NOT FOUND</h1>
+      <p>You've navigate routes that are beyond our powers</p>
+    </ng-container>
 
-  <ng-container *ngIf="statusCode == 500">
-    <img class="card__image" src="../../../assets/images/empty_state.svg" alt="Empty">
-    <h1 class="card__title">No Movies Found in {{source}}</h1>
-    <a [routerLink]="'../home'" class="btn-primary card__redirect">Explore Movies &rarr;</a>
-  </ng-container>
+    <ng-container *ngIf="statusCode == 500">
+      <img class="card__image" src="../../../assets/images/empty_state.svg" alt="Empty">
+      <h1 class="card__title">No Movies Found in {{source}}</h1>
+      <a [routerLink]="'../home'" class="btn-primary card__redirect">Explore Movies &rarr;</a>
+    </ng-container>
+  </div>
 </div>
