--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -10,4 +10,6 @@
       <app-movie-card [isSkeleton]="true" *ngFor="let i of [1, 2, 3, 4, 5, 6, 7, 8, 9, 10]"></app-movie-card>
     </ng-container>
   </div>
+
+  <app-paginator *ngIf="maxPages != 0 && maxPages" [maxPage]="maxPages"></app-paginator>
 </div>
