--- a/src/app/components/null-state/null-state.component.scss
+++ b/src/app/components/null-state/null-state.component.scss
@@ -1,16 +1,22 @@
 @import "../../../assets/variables";
 @import "../../../assets/sudo";
 
+.null-state {
+  height: 100vh;
+  .card {
+    text-align: center;
+    padding: $gutter3x;
+    background-color: darken($color: $dark, $amount: 5);
+    border-radius: $border-radius-medium;
+    width: max-content;
+    margin: 0 auto;
 
-.card {
-  padding: $gutter3x;
-  background-color: darken($color: $dark, $amount: 5);
-  border-radius: $border-radius-medium;
-  width: max-content;
-  margin: 0 auto;
+    &__image {
+      max-height: 300px;
+    }
 
-  &__image {
-    max-height: 300px;
+    & :not(:last-child) {
+      margin-bottom: $gutter;
+    }
   }
-
 }
